--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <ul class="sub">
                 <li><a href="#">20xx</a></li>
                 <li><a href="#">20xx</a></li>
-                <li><a href="#">2017</a></li>
-                <li><a href="#">2016</a></li>
+                <li><a href="#">20xx</a></li>
+                <li><a href="#">20xx</a></li>
               </ul>
             </li>
 
